--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -1,7 +1,7 @@
 extends base.pug
 include mixins/video
 block content
-  h2 this is trend video.
+  h2 TREND VIDEO!
   each vid in vids 
     +video(vid)
   else
