--- a/src/views/upload.pug
+++ b/src/views/upload.pug
@@ -2,7 +2,9 @@ extends base.pug
 block content 
   if errorMessage
     span=errorMessage 
-  form(method="POST")
+  form(method="POST", enctype="multipart/form-data")
+    label(for="video") VIDEO 
+    input(type="file",name="video",id="video",accept="video/*",required)
     input(type="text",name="title",placeholder="TITLE",required,maxlength=80)
     input(type="text",name="description",placeholder="description",required,minlength=20)
     input(type="text",name="hashtags",placeholder="hashtags, separated by comma",required)
