--- a/src/views/user-edit.pug
+++ b/src/views/user-edit.pug
@@ -2,6 +2,8 @@ extends base.pug
 block content
   if errorMessage 
     span=errorMessage
+  img(src="/" + loggedInUser.avatarUrl, width="100", height="100")
+  //- 링크 생성 위해 "/" 필요.
   form(method="POST", enctype="multipart/form-data")
     label(for="avatar") AVATAR
     input(name="avatar", type="file", id="avatar" accept="image/*")
