--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -18,7 +18,7 @@ html(lang="ko")
               li 
                 a(href="/user/edit") EDIT PROFILE
               li 
-                a(href="/userProfile") #{loggedInUser.name}'S PROFILE
+                a(href=`/user/${loggedInUser._id}`) #{loggedInUser.name}'S PROFILE
               li 
                 a(href="/video/upload") UPLOAD
             else
