--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -2,31 +2,11 @@ doctype html!
 html(lang="ko")
   head
     title #{pageTitle} OF MATUBE
-    link(rel="stylesheet" href="https://unpkg.com/mvp.css")
+    link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css")
+    link(rel="stylesheet" href="/assets/css/style.css")
   body
-    header
-      h1=pageTitle
-    main 
-      h2
-        nav
-          ul 
-            li 
-              a(href="/") HOME
-            if loggedIn
-              li 
-                a(href="/logout") LOGOUT 
-              li 
-                a(href="/user/edit") EDIT PROFILE
-              li 
-                a(href=`/user/${loggedInUser._id}`) #{loggedInUser.name}'S PROFILE
-              li 
-                a(href="/video/upload") UPLOAD
-            else
-              li 
-                a(href="/login") LOGIN
-              li 
-                a(href="/join") JOIN
-            li 
-              a(href="/search") SEARCH
+    include partials/header
+    main
       block content
-    include partials/footer.pug
+    include partials/footer
+  script(src="/assets/js/main.js")
