--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -2,7 +2,8 @@ extends base.pug
 include mixins/video
 block content
   h2 TREND VIDEO!
-  each vid in vids 
-    +video(vid)
-  else
-    li nothing found. 
+  div.video-grid
+    each vid in vids 
+      +video(vid)
+    else
+      span.empty__message NOTHING FOUND!
