--- a/src/client/SCSS/components/header.scss
+++ b/src/client/SCSS/components/header.scss
@@ -1,24 +1,25 @@
 header {
-  padding: 20px 50px;
+  padding: 10px 10px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   .header__logo {
     color: $logo;
     font-size: 50px;
+    padding: 20px;
   }
   ul {
     display: flex;
     justify-content: space-between;
     align-items: center;
     li {
-      font-size: 12px;
-      font-weight: 400;
-      margin-left: 25px;
+      font-size: 15px;
+      font-weight: 500;
+      margin: 20px;
       text-transform: uppercase;
     }
     i {
-      font-size: 10px;
+      font-size: 15px;
     }
   }
   .header__btn {
@@ -26,5 +27,10 @@ header {
     color: $logo;
     padding: 5px 10px;
     border-radius: 10px;
+  }
+  .header__avatar {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
   }
 }
