--- a/src/client/SCSS/screens/search.scss
+++ b/src/client/SCSS/screens/search.scss
@@ -1,21 +1,34 @@
 .search__form {
-  display: flex;
-  flex-direction: column;
-  max-width: 300px;
+  max-width: 250px;
   margin: 0 auto;
+  margin-bottom: 25px;
+  display: flex;
+  align-items: center;
+  position: relative;
   input {
     all: unset;
     padding: 10px 10px;
     border-radius: 10px;
-    border: 1px solid ivory;
-    margin-bottom: 10px;
-    background-color: grey;
+    border: 2.5px solid ivory;
+    // background-color: darkgrey;
     color: ivory;
     font-size: 15px;
     text-align: center;
+    width: 90%;
   }
-  input[type="submit"] {
+  input::placeholder {
+    color: ivory;
+    font-size: 15px;
+  }
+  button {
+    all: unset;
+  }
+  button {
+    position: absolute;
+    right: 35px;
+    top: 35px;
     text-align: center;
-    background-color: darkgrey;
+    cursor: pointer;
+    color: ivory;
   }
 }
