--- a/src/views/join.pug
+++ b/src/views/join.pug
@@ -4,13 +4,13 @@ block content
   if errorMessage 
     span=errorMessage
   form(method="POST")
-    input(name="email", type="email", placeholder="Email", required)
-    input(name="password", type="password", placeholder="Password", required)
-    input(name="passwordCheck", type="password", placeholder="PasswordCheck", required)
-    input(name="username", type="text", placeholder="Username", required)
-    input(name="name", type="text", placeholder="Name", required)
-    input(name="location", type="text", placeholder="Location", required)
+    input(name="email", type="email", placeholder="EMAIL", required)
+    input(name="password", type="password", placeholder="PASSWORD", required)
+    input(name="passwordCheck", type="password", placeholder="CHECK PASSWORD", required)
+    input(name="username", type="text", placeholder="USERNAME", required)
+    input(name="name", type="text", placeholder="NAME", required)
+    input(name="location", type="text", placeholder="LOCATION", required)
     input(type="submit", value="JOIN")
-  div 
+  div.auth-switch
     span ALREADY USER? 
     a(href="/login") LOGIN NOW! &rarr;
