--- a/src/views/login.pug
+++ b/src/views/login.pug
@@ -4,11 +4,10 @@ block content
   if errorMessage 
     span=errorMessage
   form(method="POST")
-    input(name="username", type="text", placeholder="Username", required)
-    input(name="password", type="password", placeholder="Password", required)
+    input(name="username", type="text", placeholder="USERNAME", required)
+    input(name="password", type="password", placeholder="PASSWORD", required)
     input(type="submit", value="JOIN")
-    br
-    a(href="/user/github/login") WITH GITHUB &rarr;
-  div 
+    include partials/social-login
+  div.auth-switch
     span NOT A USER? 
     a(href="/join") CREATE NOW! &rarr;
