--- a/src/views/partials/header.pug
+++ b/src/views/partials/header.pug
@@ -12,9 +12,13 @@ header
         li 
           a(href="/user/edit") EDIT PROFILE
         li 
-          a(href=`/user/${loggedInUser._id}`) #{loggedInUser.name}'S PROFILE
-        li 
           a(href="/video/upload") UPLOAD
+        li 
+          a(href=`/user/${loggedInUser._id}`)
+            if loggedInUser.avatarUrl === ""
+              span ⭐️
+            else
+              img.header__avatar(src="/"+loggedInUser.avatarUrl)
       else
         li 
           a(href="/login") LOGIN
