--- a/src/views/search.pug
+++ b/src/views/search.pug
@@ -4,7 +4,8 @@ include mixins/video
 block content 
   form(method="GET").search__form
     input(name="keyword",type="text",placeholder="TITLE")
-    input(type="submit",value="SEARCH")
+    button
+      i.fas.fa-search
   div.video-grid
     each video in videos 
       +video(video)
