--- a/src/views/user-edit.pug
+++ b/src/views/user-edit.pug
@@ -2,9 +2,7 @@ extends base.pug
 block content
   if errorMessage 
     span=errorMessage
-  img(src="/" + loggedInUser.avatarUrl, width="100", height="100")
-  //- 링크 생성 위해 "/" 필요.
-  form(method="POST", enctype="multipart/form-data")
+  form(method="POST", enctype="multipart/form-data").user-edit__form
     label(for="avatar") AVATAR
     input(name="avatar", type="file", id="avatar" accept="image/*")
     input(name="email", type="email", placeholder="Email", value=loggedInUser.email, required)
@@ -13,5 +11,5 @@ block content
     input(name="location", type="text", placeholder="Location", value=loggedInUser.location, required)
     input(type="submit", value="EDIT PROFILE")
   if !loggedInUser.socialOnly
-    br
-    a(href="change-password") CHANGE PASSWORD &rarr;
+    div.user-edit__password
+      a(href="change-password") CHANGE PASSWORD &rarr;
