--- a/src/views/user/profile.pug
+++ b/src/views/user/profile.pug
@@ -1,7 +1,11 @@
 extends ../base.pug
 include ../mixins/video
 block content
-  each vid in user.video 
-    +video(vid)
-  else
-    li NOTHING FOUND.
+  div.profile__data
+    img(src="/"+  user.avatarUrl).avatar
+    h3=user.name
+  div.video-grid
+    each vid in user.video 
+      +video(vid)
+    else
+      span.empty__message NOTHING FOUND.
