--- a/src/client/SCSS/styles.scss
+++ b/src/client/SCSS/styles.scss
@@ -11,6 +11,7 @@
 @import "./components/social-login.scss";
 @import "./components/body.scss";
 @import "./components/label.scss";
+@import "./components/video-player.scss";
 
 //screens
 @import "./screens/search.scss";
