--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -3,10 +3,11 @@ html(lang="ko")
   head
     title #{pageTitle} OF MATUBE
     link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css")
-    link(rel="stylesheet" href="/assets/css/style.css")
+    link(rel="stylesheet", href="/assets/css/style.css")
   body
     include partials/header
     main
       block content
     include partials/footer
+  //- script(src="/assets/js/main.js")
   block scripts
