--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -1,27 +1,35 @@
 extends base
 
 block content
-  video(src="/"+video.fileUrl, controls)
-  div
-    button#play PLAY 
-    button#mute MUTE 
-    input(type="range", min="0", max="1", step="0.01", value=0.5)#volume
-    div 
-      span#currentTime 00:00
-      span  |   
-      span#totalTime 00:00
-
-//-
-  div
-    p=video.description
-    small=video.createdAt 
-  div 
-    small 
-      a(href=`/user/${video.owner._id}`) #{video.owner.name}'S VIDEO
-  if String(loggedInUser._id) === String(video.owner._id)
-    a(href=`${video.id}/edit`) EDIT &rarr;
-    br
-    a(href=`${video.id}/delete`) DELETE &rarr;
+  div#videoContainer(data-id=video._id)
+    video(src="/"+video.fileUrl)
+    //- div#videoController
+    //-   button#play PLAY 
+    //-   button#mute MUTE 
+    //-   input(type="range", min="0", max="1", step="0.01", value=0.5)#volume
+    div#videoController.videoControls
+      div.videoControls__play
+        span#play.videoControls__playBtn
+          i.fas.fa-play
+        div.videoControls__time
+          span#currentTime 00:00
+          span  / 
+          span#totalTime 00:00
+      input(type="range",step="1", value="0", min="0")#timeline.videoControls__timeline
+      div.videoControls__volume
+        input(type="range",step="0.1", value=0.5, min="0", max="1")#volume
+        span#mute
+          i.fas.fa-volume-up
+      div 
+        span#fullScreen
+          i.fas.fa-expand
+      //-   span#currentTime 00:00:00
+      //-   span  |   
+      //-   span#totalTime 00:00:00
+      //- div 
+      //-   input(type="range", min="0", step="1", value=0)#timeline
+      //- div
+      //-   button#fullscreen ENTER FULL
 
 block scripts
   script(src="/assets/js/videoPlayer.js")
