--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -1,6 +1,9 @@
-doctype html!
+doctype doctype html
 html(lang="ko")
   head
+    meta(charset="UTF-8")
+    meta(http-equiv="X-UA-Compatible", content="IE=edge")
+    meta(name="viewport", content="width=device-width, initial-scale=1.0")
     title #{pageTitle} OF MATUBE
     link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css")
     link(rel="stylesheet", href="/assets/css/style.css")
@@ -9,5 +12,4 @@ html(lang="ko")
     main
       block content
     include partials/footer
-  //- script(src="/assets/js/main.js")
   block scripts
