--- a/src/client/SCSS/components/video.scss
+++ b/src/client/SCSS/components/video.scss
@@ -1,9 +1,10 @@
 // video mixin
 .video-mixin {
+  padding: 10px;
   .video-mixin__thumb {
-    height: 150px;
+    height: 200px;
     border-radius: 5px;
-    width: 100%;
+    width: 200px;
     background-color: ivory;
   }
   .video-mixin__data {
