--- a/src/client/SCSS/styles.scss
+++ b/src/client/SCSS/styles.scss
@@ -12,12 +12,14 @@
 @import "./components/body.scss";
 @import "./components/label.scss";
 @import "./components/video-player.scss";
+@import "./components/recording.scss";
 
 //screens
 @import "./screens/search.scss";
 @import "./screens/profile.scss";
 @import "./screens/user-edit.scss";
 @import "./screens/home.scss";
+@import "./screens/watch.scss";
 
 //defaults
 a {
@@ -37,4 +39,33 @@ main {
   width: 100%;
   margin: 0 auto;
   margin-top: 50px;
+}
+@keyframes fadeOut {
+  from {
+    transform: none;
+    opacity: 1;
+  }
+  to {
+    transform: translateX(-50);
+    opacity: 0;
+  }
+}
+
+.messages {
+  position: absolute;
+  top: 100px;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  max-width: 100px;
+  padding: 15px 20px;
+  border-radius: 200px;
+  text-align: center;
+  font-size: 20px;
+  animation: fadeOut 1s ease-in-out forwards;
+  animation-delay: 3s;
+  &.error {
+    background-color: black;
+    color: $bg;
+  }
 }
