--- a/src/views/upload.pug
+++ b/src/views/upload.pug
@@ -2,16 +2,19 @@ extends base
 block content 
   if errorMessage
     span=errorMessage
-  div 
-    video#preview
-    button#startBtn START RECORD
-  form(method="POST", enctype="multipart/form-data")
-    label(for="video") VIDEO 
-    input(type="file",name="video",id="video",accept="video/*",required)
-    input(type="text",name="title",placeholder="TITLE",required,maxlength=80)
-    input(type="text",name="description",placeholder="DESCRIPTION",required,minlength=20)
-    input(type="text",name="hashtags",placeholder="HASHTAGS, USE COMMA",required)
-    input(type="submit",value="UPLOAD")
+  div.recording
+    div.preview
+      video#preview
+      button#flowBtn.flow__btn START RECORD
+    form(method="POST", enctype="multipart/form-data")
+      label(for="video") VIDEO 
+      input(type="file",name="video",id="video",accept="video/*",required)
+      label(for="thumb") THUMBNAIL 
+      input(type="file",name="thumb",id="thumb",accept="image/*",required)
+      input(type="text",name="title",placeholder="TITLE",required,maxlength=80)
+      input(type="text",name="description",placeholder="DESCRIPTION",required,minlength=20)
+      input(type="text",name="hashtags",placeholder="HASHTAGS, USE COMMA",required)
+      input(type="submit",value="UPLOAD")
   script(src="/assets/js/main.js")
   block scripts
     script(src="/assets/js/recorder.js")
