--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -47,6 +47,7 @@ block content
         button ADD
 
 block scripts
+  script(src="/assets/js/main.js")
   script(src="/assets/js/videoPlayer.js")
   if loggedIn 
     script(src="/assets/js/commentBox.js")
