--- a/src/views/partials/header.pug
+++ b/src/views/partials/header.pug
@@ -18,10 +18,11 @@ header
             if loggedInUser.avatarUrl === ""
               span ⭐️
             else
-              if loggedInUser.socialOnly 
-                img.header__avatar(src=loggedInUser.avatarUrl,crossorigin)
-              else 
-                img.header__avatar(src="/"+loggedInUser.avatarUrl,crossorigin)
+              if loggedInUser.avatarUrl
+                if loggedInUser.avatarUrl.includes("github") 
+                  img.header__avatar(src=loggedInUser.avatarUrl,crossorigin)
+                else 
+                  img.header__avatar(src=loggedInUser.avatarUrl,crossorigin)
       else
         li 
           a(href="/login") LOGIN
