--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -1,7 +1,7 @@
 extends base.pug
 include mixins/video
 block content
-  h1.home__h1 THIS IS TREND VIDEO
+  h1.h1 THIS IS TREND VIDEO
   div.video-grid
     each vid in vids 
       +video(vid)
