--- a/src/views/user/profile.pug
+++ b/src/views/user/profile.pug
@@ -2,7 +2,7 @@ extends ../base.pug
 include ../mixins/video
 block content
   div.profile__data
-    img(src="/"+user.avatarUrl, crossorigin).avatar
+    img(src=user.avatarUrl, crossorigin).avatar
     h3=user.name
   div.video-grid
     each vid in user.video 
