--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -1,6 +1,20 @@
 extends base
 
 block content
+  div.video__data
+    p.video__title=video.title
+    small.video__owner UPLOADED BY 
+      a(href=`/user/${video.owner._id}`)=video.owner.name
+    small.video__createdAt=new Date(video.createdAt).toLocaleDateString("ko-kr", {weekday: 'long', year: 'numeric', month: 'long', day: 'numeric'})
+    if String(video.owner._id) === String(loggedInUser._id)
+      div.video__edit-delete
+        a(href=`${video.id}/edit`)
+          i.fas.fa-scissors
+          |  EDIT 
+        a(href=`${video.id}/delete`)
+          i.fas.fa-trash
+          |  DELETE
+
   div#videoContainer(data-id=video._id)
     video(src=video.fileUrl,crossorigin)
     div#videoController.videoControls
@@ -20,31 +34,20 @@ block content
         span#fullScreen
           i.fas.fa-expand
 
-  div.video__data
-    p.video__title=video.title
-    small.video__owner UPLOADED BY 
-      a(href=`/user/${video.owner._id}`)=video.owner.name
-    small.video__createdAt=new Date(video.createdAt).toLocaleDateString("ko-kr", {weekday: 'long', year: 'numeric', month: 'long', day: 'numeric'})
-    if String(video.owner._id) === String(loggedInUser._id)
-      a(href=`${video.id}/edit`) EDIT &rarr;
-      //- a(href=`${video.id}/delete`) DELETE &rarr;
-
-  div.video__comment
-    ul 
-      each comment in video.comment.reverse()
-        li.comment__text(data-id=comment._id)
-          i.fas.fa-comment
-          span  #{comment.text}
-          if String(comment.owner._id) === String(loggedInUser._id)
-            span#deleteBtn
-              i.fas.fa-dove
-              //- .delete__btn#deleteBtn  🤫
-
-  if loggedIn
-    div.video__add-comment
-      form.video__comment-form#commentForm
-        textarea(cols="30", rows="10" placeholder="COMMENT WITHIN 20 CHAR")
-        button ADD
+  div.comment-area
+    if loggedIn
+      div.video__add-comment
+        form.video__comment-form#commentForm
+          textarea(placeholder="COMMENT WITHIN 20 CHAR.")
+          button.fas.fa-comment
+    div.video__comment
+      ul 
+        each comment in video.comment.reverse()
+          li.comment__text(data-id=comment._id)
+            i.fas.fa-comment
+            span  #{comment.text}
+            if String(comment.owner._id) === String(loggedInUser._id)
+              button.fas.fa-dove#deleteBtn
 
 block scripts
   script(src="/assets/js/main.js")
