--- a/src/client/SCSS/config/_variables.scss
+++ b/src/client/SCSS/config/_variables.scss
@@ -4,4 +4,5 @@ $text: #cccb9b;
 $logo: ivory;
 $yellow: #d2cf47;
 $github: #2ea44e;
-$yellow2: #cfbb00;
+$yellow2: #d2cf47;
+$red: rgba(247, 93, 66, 0.836);
