--- a/src/client/SCSS/styles.scss
+++ b/src/client/SCSS/styles.scss
@@ -58,14 +58,22 @@ main {
   right: 0;
   margin: 0 auto;
   max-width: 100px;
-  padding: 15px 20px;
+  padding: 15px 40px;
   border-radius: 200px;
   text-align: center;
   font-size: 20px;
-  animation: fadeOut 1s ease-in-out forwards;
+  animation: fadeOut 5s ease-in-out forwards;
   animation-delay: 3s;
   &.error {
-    background-color: black;
-    color: $bg;
+    background-color: $bg2;
+    color: $red;
+  }
+  &.info {
+    background-color: $bg2;
+    color: ivory;
+  }
+  &.success {
+    background-color: $bg2;
+    color: $yellow2;
   }
 }
