NEW COMMNET EDIT

--- a/src/client/SCSS/components/forms.scss
+++ b/src/client/SCSS/components/forms.scss
@@ -1,4 +1,10 @@
 form {
+  max-width: 500px;
+  margin: 0 auto;
+  padding: 20px;
+  position: relative;
+  background-color: $bg2;
+  border-radius: 10px;
   a {
     color: $yellow2;
     font-size: 30px;
@@ -7,31 +13,9 @@ form {
   label {
     font-size: 25px;
   }
-  max-width: 500px;
-  margin: 0 auto;
-  padding: 20px;
-  background-color: $bg2;
-  border-radius: 10px;
   input[type="submit"] {
     color: $bg2;
     background-color: ivory;
-  }
-  textarea {
-    all: unset;
-    padding: 10px 20px;
-    border-radius: 10px;
-    border: 2px solid ivory;
-    margin-bottom: 5px;
-    margin-top: 5px;
-    color: ivory;
-    width: 90%;
-    height: 20px;
-  }
-  button {
-    background-color: $bg2;
-    border: 0;
-    font-size: 20px;
-    color: ivory;
   }
 }
 input:not(input[type="range"], input[type="submit"]) {
