--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -23,7 +23,7 @@ block content
           i.fas.fa-play
         div.videoControls__time
           span#currentTime 00:00
-          span  / 
+          span  |  
           span#totalTime 00:00
       input(type="range",step="1", value="0", min="0")#timeline.videoControls__timeline
       div.videoControls__volume
