--- a/src/client/SCSS/components/video-player.scss
+++ b/src/client/SCSS/components/video-player.scss
@@ -1,7 +1,8 @@
 #videoContainer {
   width: 100%;
   position: relative;
-  margin: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
   video {
     width: 100%;
     max-height: 600px;
@@ -22,7 +23,7 @@
     right: 0;
     margin: 0 auto;
     display: grid;
-    grid-template-columns: 1fr 4fr 1fr auto;
+    grid-template-columns: 3fr 4fr 0.5fr auto;
     gap: 10px;
     justify-content: space-between;
     background-color: $bg2;
