PASSWORD, COMMENT BUTTON EDIT

--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -39,7 +39,7 @@ block content
       div.video__add-comment
         form.video__comment-form#commentForm
           textarea(placeholder="COMMENT WITHIN 20 CHAR.")
-          button.fas.fa-comment
+          button.fas.fa-comments
     div.video__comment
       ul 
         each comment in video.comment.reverse()
