--- a/src/client/SCSS/screens/watch.scss
+++ b/src/client/SCSS/screens/watch.scss
@@ -74,7 +74,7 @@
         margin-left: auto;
         border-radius: 1000px;
         background-color: $bg2;
-        border: 0ch;
+        border: 0px;
         font-size: 18px;
         color: $yellow2;
       }
