--- a/src/views/user/profile.pug
+++ b/src/views/user/profile.pug
@@ -2,8 +2,12 @@ extends ../base.pug
 include ../mixins/video
 block content
   div.profile__data
-    img(src=user.avatarUrl, crossorigin).avatar
+    if user.avatarUrl === undefined
+      i.fas.fa-smile 
+    else
+      img(src=user.avatarUrl, crossorigin).avatar
     h3=user.name
+    
   div.video-grid
     each vid in user.video 
       +video(vid)
